--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>فروت نینجا</title>
+  <title>maze</title>
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -43,8 +43,8 @@
 </head>
 <body>
   <h1>(rouzbeh)</h2>
-  <h2>🎮 fruit ninja </h1>
-  <iframe src="https://scratch.mit.edu/projects/1220733174/embed"
+  <h2>🎮 maze </h1>
+  <iframe src="https://scratch.mit.edu/projects/1221023718/embed"
           allowtransparency="true"
           frameborder="0"
           scrolling="no"
@@ -52,3 +52,4 @@
   </iframe>
 </body>
 </html>
+
